--- a/package.json
+++ b/package.json
@@ -6,17 +6,35 @@
     "scripts": {
         "build": "rimraf dist && tsc -p tsconfig.build.json",
         "dev": " tsc-watch -p tsconfig.build.json --onSuccess \"node  dist/main.js\"",
+        "after-30-days": "node dist/main.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Daniel Salazar",
     "license": "ISC",
+    "dependencies": {
+        "rimraf": "^3.0.2"
+    },
     "devDependencies": {
-        "nodemon": "^2.0.6",
+        "@types/jest": "^26.0.20",
+        "@types/node": "^14.14.32",
+        "jest": "^26.6.3",
+        "ts-jest": "^26.5.3",
         "tsc-watch": "^4.2.9",
         "tslint": "^6.1.3",
         "typescript": "^4.2.3"
     },
-    "dependencies": {
-        "rimraf": "^3.0.2"
+    "jest": {
+        "moduleFileExtensions": [
+            "js",
+            "json",
+            "ts"
+        ],
+        "rootDir": "src",
+        "testRegex": ".spec.ts$",
+        "transform": {
+            "^.+\\.(t|j)s$": "ts-jest"
+        },
+        "coverageDirectory": "../coverage",
+        "testEnvironment": "node"
     }
 }
